Updated API URL and CORS settings

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MONGO_URI=mongodb+srv://securekonnectltd:Sa0BP9AiA6OlErqH@bosano.oxgr4.mongodb.n
 PORT=5000
 JWT_SECRET=bosano2024secretkey
 ADMIN_REGISTRATION_CODE=bosanoadmin
-FRONTEND_URL=https://your-frontend-url.vercel.app
+FRONTEND_URL=https://bosanofmn.vercel.app
